--- a/src/App.css
+++ b/src/App.css
@@ -118,8 +118,8 @@
 }
 
 .cards {
-  grid-column-start: 0;
-  grid-column-end: span 2;
+  /* grid-column-start: 0;
+  grid-column-end: span 2; */
   background: lightcoral;
   border: 2px solid salmon;
   border-radius: 10px;
